Filter out tracks that do not last longer than the configured duration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 
 [dependencies]
+mp3-duration = "*"
 rand = "*"
 rodio = "*"
 walkdir = "2"
