Chromecast discovery (with its polling thread) is a lazy static singleton

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 
 [dependencies]
+lazy_static = "*"
 mdns = "*"
 mp3-duration = "*"
 nom = "4"
