Global discovery of all backend audio devices via an iterator
Add an enum that closes over backend types and implements the player trait
to enable dynamic dispatch.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 
 [dependencies]
+hostname = "^0.1"
 lazy_static = "*"
 mdns = "*"
 mp3-duration = "*"
