--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 
 [dependencies]
+floating-duration = "0.1.2"
 hostname = "^0.1"
 mdns = "*"
 mp3-duration = "*"
