Add an embedded HTTP server for serving media to chromecast
TODO: detect IP of default network interface

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ mp3-duration = "*"
 nom = "4"
 rand = "*"
 rodio = "*"
+rouille = "*"
 rust_cast = "*"
 taglib = "*"
+tree_magic = "*"
 walkdir = "2"
