Switch to a different tag backend to enable parsing cover art

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ interfaces = "*"
 log = "*"
 mdns = "*"
 mp3-duration = "*"
+neguse-taglib = { git = "https://github.com/SilverEzhik/neguse-taglib" }
 nom = "4"
 rand = "*"
 rodio = "*"
 rouille = "*"
 rust_cast = "*"
-taglib = "*"
 tree_magic = "*"
 walkdir = "2"
