Use [[NSHost currentHost] localizedName] to grab local device name on mac and iOS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ mdns = "*"
 mp3-duration = "*"
 neguse-taglib = { git = "https://github.com/SilverEzhik/neguse-taglib" }
 nom = "4"
+objc = "*"
 rand = "*"
 rodio = "*"
 rouille = "*"
