Refactor playlist track and config objects
- Track owns parsing metadata
- Use track to extract metadata in media server
- attach game config globals to players

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ interfaces = "*"
 log = "*"
 mdns = "*"
 mp3-duration = "*"
+neguse-types = { git = "https://github.com/SilverEzhik/neguse-types" }
 neguse-taglib = { git = "https://github.com/SilverEzhik/neguse-taglib" }
 nom = "4"
 objc = "*"
