first cut at tokio-powered cast client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,15 @@ protobuf-codegen-pure = "2"
 
 [dependencies]
 byteorder = "1"
+bytes = "*"
 crossbeam-channel = "0.3"
 floating-duration = "0.1.2"
+futures = "*"
 hostname = "^0.1"
 log = "*"
 mdns = "*"
 mp3-duration = "*"
+native-tls = "*"
 neguse-types = { git = "https://github.com/SilverEzhik/neguse-types" }
 neguse-taglib = { git = "https://github.com/SilverEzhik/neguse-taglib" }
 nom = "4"
@@ -25,6 +28,9 @@ rodio = "*"
 rouille = "*"
 rust_cast = "*"
 serde_json = "1.0"
+tokio = "*"
+tokio-io = "*"
+tokio-tls = "*"
 tree_magic = "*"
 url = "*"
 walkdir = "2"
