nuked a lot of compiler errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ byteorder = "1"
 bytes = "*"
 crossbeam-channel = "0.3"
 floating-duration = "0.1.2"
-futures = "*"
+futures = "0.1"
 hostname = "^0.1"
 log = "*"
 mdns = "*"
@@ -29,6 +29,7 @@ rouille = "*"
 rust_cast = "*"
 serde_json = "1.0"
 tokio = "*"
+tokio-codec = "*"
 tokio-io = "*"
 tokio-tls = "*"
 tree_magic = "*"
