--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ serde_json = "1.0"
 tokio = "*"
 tokio-codec = "*"
 tokio-io = "*"
+tokio-timer = "*"
 tokio-tls = "*"
 tree_magic = "*"
 url = "*"
