--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ rand = "*"
 rodio = "*"
 rouille = "*"
 rust_cast = "*"
+serde = "*"
+serde_derive = "*"
 serde_json = "1.0"
 tokio = "*"
 tokio-tls = "*"
