Error handling, fix panic, logging
- Add env_logger
- Convert println in cast client to debug/info/warn
- Add global encode/decode counters to codec
- Nuke global request id
- use encode counter as request id
- Remove req id from command enum variants
- warn on future failure
- Fix panics in BytesMut by reserving capacity for encode and decode io

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ protobuf-codegen-pure = "2"
 [dependencies]
 byteorder = "1"
 bytes = "*"
+env_logger = "0.6.0"
 floating-duration = "0.1.2"
 futures = "0.1"
 hostname = "^0.1"
-log = "*"
+log = "0.4.0"
 mdns = "*"
 mp3-duration = "*"
 native-tls = "*"
