--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bytes = "*"
 env_logger = "0.6.0"
 floating-duration = "0.1.2"
 futures = "0.1"
+futures-locks = "0.2"
 hostname = "^0.1"
 log = "0.4.0"
 mdns = "*"
