Use mime type and mp4 duration to construct playlist
Add mp4parse crate for parsing mp4 duration.
Use tree_magic to determine whether a file is an audio file by
comparing mime type against an allow list.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ hostname = "^0.1"
 log = "0.4.0"
 mdns = "*"
 mp3-duration = "*"
+mp4parse = "*"
 native-tls = "*"
 neguse-types = { git = "https://github.com/SilverEzhik/neguse-types" }
 neguse-taglib = { git = "https://github.com/SilverEzhik/neguse-taglib" }
@@ -24,7 +25,7 @@ nom = "4"
 objc = "*"
 openssl = "*"
 protobuf = "~2"
-rand = "*"
+rand = "0.6"
 rodio = "*"
 rouille = "*"
 serde = "*"
