--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 protobuf-codegen-pure = "2"
 
 [dependencies]
+base64 = "0.10"
 byteorder = "1"
 bytes = "*"
 env_logger = "0.6.0"
