--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development --open",
-    "lint": "eslint src/ --fix"
+    "lint": "eslint src/ --fix",
+    "lint-css": "prettier --write src/*.css"
   }
 }
