--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "clamp": "^1.0.1",
     "connected-react-router": "^6.0.0",
     "history": "^4.7.2",
     "react": "^16.6.3",
