--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -20,9 +20,11 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
@@ -31,6 +33,7 @@
     "clamp": "^1.0.1",
     "connected-react-router": "^6.0.0",
     "history": "^4.7.2",
+    "object-dig": "^0.1.3",
     "react": "^16.6.3",
     "react-css-transition-replace": "^3.0.3",
     "react-dom": "^16.6.3",
