--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.6.3",
     "react-image": "^1.5.1",
     "react-player-controls": "^1.0.0-beta.0",
+    "react-pure-lifecycle": "^3.0.0",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
