--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
@@ -31,6 +32,8 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@material-ui/core": "^3.6.2",
+    "@material-ui/icons": "^3.0.1",
     "clamp": "^1.0.1",
     "object-dig": "^0.1.3",
     "react": "^16.6.3",
