--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -35,6 +35,7 @@
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
     "clamp": "^1.0.1",
+    "format-duration": "^1.3.1",
     "object-dig": "^0.1.3",
     "react": "^16.6.3",
     "react-css-transition-replace": "^3.0.3",
