Refactor playlist sources
- Move existing code into a playlist::fs module
- Rename from_directory to playlist::fs::dir
- Add playlist::fs::music to load from the current user's music directory
- refactor from_directory to be more performant for large directories
- catch panics in mp3_duration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ protobuf-codegen-pure = "2"
 base64 = "0.10"
 byteorder = "1"
 bytes = "*"
+dirs = "*"
 env_logger = "0.6.0"
 floating-duration = "0.1.2"
 futures = "0.1"
