--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^2.0.0",
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
@@ -51,5 +52,8 @@
     "dist": "webpack --mode production",
     "lint": "eslint --fix src/**/*.js",
     "fmt": "prettier --write src/**/*.{css,js}"
-  }
+  },
+  "sideEffects": [
+    "*.css"
+  ]
 }
