Add timing metrics to playlist creation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.10"
 byteorder = "1"
 bytes = "*"
 dirs = "*"
+elapsed = "0.1"
 env_logger = "0.6.0"
 floating-duration = "0.1.2"
 futures = "0.1"
