--- a/punchtop-ui-react/package.json
+++ b/punchtop-ui-react/package.json
@@ -25,8 +25,10 @@
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
@@ -48,10 +50,11 @@
     "redux": "^4.0.1"
   },
   "scripts": {
+    "build-debug": "webpack --mode development",
+    "build-release": "webpack --mode production",
     "dev": "webpack-dev-server --mode development --open",
-    "dist": "webpack --mode production",
-    "lint": "eslint --fix src/**/*.js",
-    "fmt": "prettier --write src/**/*.{css,js}"
+    "lint": "eslint --ignore-path .gitignore --fix .",
+    "fmt": "prettier --ignore-path .gitignore --write '**/*.{css,html,js,json,md}'"
   },
   "sideEffects": [
     "*.css"
