--- a/punchtop-ui-react/package.json
+++ b/punchtop-ui-react/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^2.0.0",
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.15.3",
