--- a/punchtop-ui-react/package.json
+++ b/punchtop-ui-react/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
@@ -40,7 +41,6 @@
     "@material-ui/icons": "^3.0.1",
     "clamp": "^1.0.1",
     "format-duration": "^1.3.1",
-    "object-dig": "^0.1.3",
     "react": "^16.6.3",
     "react-css-transition-replace": "^3.0.3",
     "react-dom": "^16.6.3",
