Split out SVG loader

--- a/punchtop-ui-react/package.json
+++ b/punchtop-ui-react/package.json
@@ -30,6 +30,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prettier": "^1.15.3",
     "style-loader": "^0.23.1",
+    "svg-url-loader": "^2.3.2",
+    "svgo": "^1.1.1",
+    "svgo-loader": "^2.2.0",
     "terser-webpack-plugin": "^1.2.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.27.1",
