Rename webview components
punchtop-app-webview => punchtop-webview
punchtop-ui-react => punchtop-react

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace]
 members = [
   "cast-client",
-  "punchtop-app-webview",
   "punchtop-audio",
   "punchtop-playlist",
+  "punchtop-webview",
   "stream-util",
 ]
