--- a/punchtop-react/package.json
+++ b/punchtop-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "punchtop-ui-react",
+  "name": "punchtop-react",
   "version": "0.1.0",
   "main": "index.js",
   "repository": "https://github.com/lopopolo/punchtop",
