--- a/punchtop-webview/Cargo.toml
+++ b/punchtop-webview/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "punchtop"
+name = "punchtop-webview"
 version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 edition = "2018"
