--- a/punchtop-audio/Cargo.toml
+++ b/punchtop-audio/Cargo.toml
@@ -3,6 +3,9 @@ name = "punchtop-audio"
 version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 edition = "2018"
+keywords = ["audio", "chromecast"]
+categories = ["multimedia::audio"]
+license = "MIT"
 
 [dependencies]
 base64 = "0.10"
