--- a/punchtop-playlist/Cargo.toml
+++ b/punchtop-playlist/Cargo.toml
@@ -3,6 +3,9 @@ name = "punchtop-playlist"
 version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 edition = "2018"
+keywords = ["audio", "playlist"]
+categories = ["multimedia::audio"]
+license = "MIT"
 
 [dependencies]
 directories = "1"
