--- a/punchtop-webview/Cargo.toml
+++ b/punchtop-webview/Cargo.toml
@@ -3,6 +3,9 @@ name = "punchtop-webview"
 version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 edition = "2018"
+keywords = ["audio", "chromecast", "react", "webview"]
+categories = ["games"]
+license = "MIT"
 
 [dependencies]
 base64 = "0.10"
