--- a/stream-util/Cargo.toml
+++ b/stream-util/Cargo.toml
@@ -3,6 +3,10 @@ name = "stream-util"
 version = "0.1.0"
 authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
 edition = "2018"
+readme = "README.md"
+keywords = ["cancel", "drain", "futures", "stream"]
+categories = ["rust-patterns"]
+license = "MIT"
 
 [dependencies]
 futures = "0.1"
