Use tokio feature from `futures-locks` for task-native locks

--- a/cast-client/Cargo.toml
+++ b/cast-client/Cargo.toml
@@ -14,7 +14,7 @@ protobuf-codegen-pure = "2"
 byteorder = "1"
 bytes = "0.4"
 futures = "0.1"
-futures-locks = { version = "0.3", default-features = false }
+futures-locks = "0.3"
 log = "0.4"
 native-tls = "0.2"
 protobuf = "2"
